--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Wahab Giwa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "morgan": "^1.10.1"
   }
 }
