--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend service that manages tour-related data such as destinations, bookings, users, pricing, and schedules, allowing client applications to create, retrieve, update, and manage tour information efficiently.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "tour",
