added static file route, set up of enviromental varia, and configure eslint

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend service that manages tour-related data such as destinations, bookings, users, pricing, and schedules, allowing client applications to create, retrieve, update, and manage tour information efficiently.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js"
   },
   "keywords": [
     "tour",
@@ -15,7 +16,11 @@
   "author": "Wahab Giwa",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "cross-env": "^10.1.0"
   }
 }
