--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.5",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
