--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.22.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "cross-env": "^10.1.0"
